SFDC Automation/src/objects/QuoteLineItemHistory__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BTR_History__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BTR History</label>
        <referenceTo>BTR_History__c</referenceTo>
        <relationshipLabel>QuoteLineItemHistorys</relationshipLabel>
        <relationshipName>QuoteLineItemHistorys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewValue__c</fullName>
        <label>NewValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldValue__c</fullName>
        <label>OldValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Line Item</label>
        <referenceTo>QuoteLineItem</referenceTo>
        <relationshipLabel>Quote Line Item History</relationshipLabel>
        <relationshipName>QuoteLineItemHistorys</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>QuoteLineItemHistory</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Action__c</columns>
        <columns>Quote_Line_Item__c</columns>
        <columns>Field__c</columns>
        <columns>NewValue__c</columns>
        <columns>OldValue__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>QuoteLineItemHistory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QuoteLineItemHistorys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>